added text to html, centered and changed color with css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Inda's Personal Website</h1>
         <script src="script.js"></script>
+        <h3>A little about me</h3>
+        <p>Hi, my name is Katie. You are currently looking at my first website and I am very excited to welcome you.</p>
+        <p>I'm finishing up my prep work for the Software Engineering bootcamp with Flatiron school. The real course starts in a little over a week
+            and I am so incredibly excited about it. It's been a lot of work getting here but I feel like it's been worth it. So, how did I get here?
+            Well, my mental health hasn't always been my friend. I graduated from high school and had to take some time off to really pull myself together,
+            I started at my local community college in the second semester of the year, ironically in psychology, and then covid hit. I went through all of this work,
+            not just with school and actual work, but also my mental health and I just felt stuck. I realized that psychology wasn't for me, and then some time later 
+            realized that regular school wasn't for me either. So I tried learning to code by myself, with some help from Harvard's CS50 course and The Odin Project.
+            No hate to either of them, I just needed help to get further along and that's when I applied to Flatiron School. You're pretty caught up on the 
+            last few years now, let me tell you about the cool stuff instead.
+        </p>
+        <ul>
+            <li>I have 2 dogs and a cat, pictured below</li>
+            <li>I used to have purple hair, then pink, and now I'm back to brown, I miss having colored hair</li>
+            <li>I've learned a lot with Flatiron School and hope to learn so much more</li>
+        </ul>
     </body>
 </html>
