added button in html, added padding, margins, and font in css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
             No hate to either of them, I just needed help to get further along and that's when I applied to Flatiron School. You're pretty caught up on the 
             last few years now, let me tell you about the cool stuff instead.
         </p>
+        <h4>The cool stuff</h4>
         <ul>
             <li>I have 2 dogs and a cat, pictured below</li>
             <li>I used to have purple hair, then pink, and now I'm back to brown, I miss having colored hair</li>
             <li>I've learned a lot with Flatiron School and hope to learn so much more</li>
+            <li>I learned to crochet by myself, which, in a sense is like coding</li>
         </ul>
+        <button>this does nothing</button>
+        
     </body>
 </html>
