made button adjustments and added images.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Inda's Personal Website</h1>
+        
+        <h1><u>Inda's Personal Website</u></h1>
         <script src="script.js"></script>
         <h3>A little about me</h3>
         <p>Hi, my name is Katie. You are currently looking at my first website and I am very excited to welcome you.</p>
@@ -18,6 +19,7 @@
             No hate to either of them, I just needed help to get further along and that's when I applied to Flatiron School. You're pretty caught up on the 
             last few years now, let me tell you about the cool stuff instead.
         </p>
+        <button id="myBtn" type="button" onclick="alert('Woah it actually did something!')">this button does nothing</button>
         <h4>The cool stuff</h4>
         <ul>
             <li>I have 2 dogs and a cat, pictured below</li>
@@ -25,7 +27,16 @@
             <li>I've learned a lot with Flatiron School and hope to learn so much more</li>
             <li>I learned to crochet by myself, which, in a sense is like coding</li>
         </ul>
-        <button>this does nothing</button>
-        
+        <img src="images/IMG_8273.JPG" alt="Jax" title="Jax the dog"
+        width="300px"
+         />
+        <img src="images/IMG_8271.JPG" alt="Gunner" title="Gunner the dog" 
+        width="300px"/>
+        <img src="images/IMG_8428 (1).JPG" alt="Cowboy" title="Cowboy the cat"
+        width="300px" />
+        <img src="images/IMG_5548.jpg" alt="Me" title="Hi, I'm Katie" 
+        width="200px"
+        height=""/>
     </body>
 </html>
+
