minor changes to html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1><u>Inda's Personal Website</u></h1>
         <script src="script.js"></script>
         <h3>A little about me</h3>
-        <p>Hi, my name is Katie. You are currently looking at my first website and I am very excited to welcome you.</p>
+        <p>Hi, my name is Katie. You are currently looking at my final project for Flatiron School's Software Engineering bootcamp prep course AND my first website! I am very excited to welcome you!</p>
         <p>I'm finishing up my prep work for the Software Engineering bootcamp with Flatiron school. The real course starts in a little over a week
             and I am so incredibly excited about it. It's been a lot of work getting here but I feel like it's been worth it. So, how did I get here?
             Well, my mental health hasn't always been my friend. I graduated from high school and had to take some time off to really pull myself together,
