made changes to javascript and added a random quote generator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         
         <h1><u>Inda's Personal Website</u></h1>
-        <script src="script.js"></script>
+        <h2>You can call me Katie though.</h2>
         <h3>A little about me</h3>
         <p>Hi, my name is Katie. You are currently looking at my final project for Flatiron School's Software Engineering bootcamp prep course AND my first website! I am very excited to welcome you!</p>
         <p>I'm finishing up my prep work for the Software Engineering bootcamp with Flatiron school. The real course starts in a little over a week
@@ -27,6 +27,7 @@
             <li>I've learned a lot with Flatiron School and hope to learn so much more</li>
             <li>I learned to crochet by myself, which, in a sense is like coding</li>
         </ul>
+        <script src="script.js"></script>
         <img src="images/IMG_8273.JPG" alt="Jax" title="Jax the dog"
         width="300px"
          />
